# kvs-rs

./: Cargo.toml  Dockerfile  README.md
examples/: channel.rs  tinydb.rs
src/: main.rs  protocol.rs  server.rs  store.rs
