[package]
edition = "2021"
name = "kvs-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.0"
tokio = {version = "1.17.0", features = ["full", "tracing"]}
tokio-stream = "0.1.8"
tokio-util = {version = "0.7.0", features = ["full"]}
console-subscriber = "0.1.3"